--- a/base/public/assets/scss/main.scss
+++ b/base/public/assets/scss/main.scss
@@ -1,4 +1,4 @@
-@import "/reset.scss";
-@import "/variables.scss";
-@import "/mixin.scss";
-@import "/style.scss";
+@import "./reset.scss";
+@import "./variables.scss";
+@import "./mixin.scss";
+@import "./style.scss";
