--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -1,172 +1,173 @@
 // @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap");
 
-.footer {
-    box-sizing: border-box;
-    position: fixed;
-    bottom: 0px;
-    // height: m543px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-content: flex-start;
+.public_footer {
+  box-sizing: border-box;
+  // position: fixed;
+  // bottom: 0px;
+  // height: m543px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  justify-content: space-around;
+  padding: 40px;
+  font-size: $font-size-footer;
+  font-family: $font-family-title;
+  color: rgba(0, 0, 0, 0.4);
+  // font-weight: $font-weight-footer;
+  // border: 2px solid blue;
+  @include responsive-tablet {
     justify-content: space-around;
-    padding: 40px;
-    font-size: $font-size-footer;
-    font-family: $font-family-title;
-    color: rgba(0, 0, 0, 0.4);
-    // font-weight: $font-weight-footer;
-    // border: 2px solid blue;
+    padding: 100px 60px;
+  }
+  @include responsive-desktop {
+    justify-content: space-around;
+    height: 543px;
+    padding: 100px 180px;
+  }
+  h4 {
+    width: 165px;
+    height: 63px;
+    // border: 5px solid #f9de4e;
+    outline: 5px solid $yellow;
+    // outline-offset: 4px;
+    // margin-right: 354px;
+    font-family: $font-family-text;
+    font-size: $font-size-name;
+    font-weight: $font-weight-title;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    line-height: 63px;
     @include responsive-tablet {
-        justify-content: space-around;
-        padding: 100px 60px;
     }
     @include responsive-desktop {
-        justify-content: space-around;
-        height: 543px;
-        padding: 100px 180px;
     }
-    h4 {
-        width: 165px;
-        height: 63px;
-        // border: 5px solid #f9de4e;
-        outline: 5px solid $yellow;
-        // outline-offset: 4px;
-        // margin-right: 354px;
-        font-family: $font-family-text;
-        font-size: $font-size-name;
-        font-weight: $font-weight-title;
-        color: rgb(0, 0, 0);
-        text-align: center;
-        line-height: 63px;
-        @include responsive-tablet {
-        }
-        @include responsive-desktop {
-        }
+  }
+  &_top_line {
+    // margin-bottom: 88px;
+    border: 2px solid $yellow;
+    // margin: 0;
+    // padding: 0;
+  }
+  &_section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 40px 0px;
+    gap: 60px;
+    @include responsive-tablet {
+      flex-direction: row;
     }
-    &_top_line {
-        // margin-bottom: 88px;
-        border: 2px solid $yellow;
-        // margin: 0;
-        // padding: 0;
+    @include responsive-desktop {
+      flex-direction: row;
     }
-    &_section {
+  }
+  &_name {
+    width: 50%;
+  }
+  &_contact {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    @include responsive-tablet {
+    }
+    @include responsive-desktop {
+      width: 50%;
+    }
+    // &_div_logo {
+    //     height: 20px;
+    //     line-height: 20px;
+    // }
+    &_number {
+      display: flex;
+      justify-content: flex-start;
+      gap: 20px;
+    }
+    &_div_logo {
+      display: flex;
+      // justify-content: center;
+      align-items: center;
+      gap: 16px;
+    }
+    &_social_media {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: start;
+      gap: 10px;
+      svg {
+        margin: 0px 5px;
+        align-items: center;
+      }
+      &_logo {
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        padding: 40px 0px;
-        gap: 60px;
-        @include responsive-tablet {
-            flex-direction: row;
-        }
-        @include responsive-desktop {
-            flex-direction: row;
-        }
+        border-spacing: 25px;
+      }
+      @include responsive-tablet {
+      }
+      @include responsive-desktop {
+        flex-direction: row;
+        align-items: center;
+      }
     }
-    &_name {
-        width: 50%;
+  }
+  &_down_line {
+    margin-bottom: 24px;
+    border: 1px solid #7bb9fc20;
+  }
+  &_nav-footer {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    box-sizing: border-box;
+    @include responsive-tablet {
     }
-    &_contact {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        @include responsive-tablet {
-        }
-        @include responsive-desktop {
-            width: 50%;
-        }
-        // &_div_logo {
-        //     height: 20px;
-        //     line-height: 20px;
-        // }
-        &_number {
-            display: flex;
-            justify-content: flex-start;
-            gap: 20px;
-        }
-        &_div_logo {
-            display: flex;
-            // justify-content: center;
-            align-items: center;
-            gap: 16px;
-        }
-        &_social_media {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: start;
-            gap: 10px;
-            svg {
-                margin: 0px 5px;
-                align-items: center;
-            }
-            &_logo {
-                display: flex;
-                border-spacing: 25px;
-            }
-            @include responsive-tablet {
-            }
-            @include responsive-desktop {
-                flex-direction: row;
-                align-items: center;
-            }
-        }
+    @include responsive-desktop {
+      flex-direction: row;
+      justify-content: space-between;
     }
-    &_down_line {
-        margin-bottom: 24px;
-        border: 1px solid #7bb9fc20;
+    ul {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      text-align: left;
+      gap: 10px;
+      @include responsive-tablet {
+      }
+      @include responsive-desktop {
+        gap: 69px;
+      }
+      a {
+        text-decoration: none;
+        color: rgba(0, 0, 0, 0.4);
+      }
+      li:hover {
+        outline: 2px solid rgba(0, 0, 0, 0.4);
+        outline-offset: 5px;
+      }
     }
-    &_nav-footer {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        box-sizing: border-box;
-        @include responsive-tablet {
-        }
-        @include responsive-desktop {
-            flex-direction: row;
-            justify-content: space-between;
-        }
-        ul {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            text-align: left;
-            gap: 10px;
-            @include responsive-tablet {
-            }
-            @include responsive-desktop {
-                gap: 69px;
-            }
-            a {
-                text-decoration: none;
-                color: rgba(0, 0, 0, 0.4);
-            }
-            li:hover {
-                outline: 2px solid rgba(0, 0, 0, 0.4);
-                outline-offset: 5px;
-            }
-        }
-        span {
-            // display: flex;
-            // text-align: right;
-        }
-    }
+    // span {
+    //   // display: flex;
+    //   // text-align: right;
+    // }
+  }
 }
 body {
   font-family: $font-family-text;
 
-  header {
+  .public__header {
     color: black;
     width: 100vw;
-    min-height: 270px;
+    min-height: 250px;
     max-height: 100vh;
-    background-color: #f9de4e;
+    background-color: $yellow;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 25px;
     @include responsive-desktop {
-      height: auto;
       width: auto;
+      margin-bottom: 57px;
     }
 
     nav {
@@ -330,6 +331,123 @@ body {
       @include responsive-desktop {
         width: 1299px;
         height: 112px;
+      }
+    }
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .container__table {
+      display: flex;
+      flex-direction: column;
+      width: 350px;
+      position: relative;
+      @include responsive-desktop {
+        width: 1193px;
+        max-height: 799px;
+        margin-bottom: 51px;
+      }
+      h3 {
+        font-size: 30px;
+        font-weight: $font-weight-title;
+        font-family: $font-family-title;
+        z-index: 1;
+        margin-bottom: 20px;
+        @include responsive-desktop {
+          font-size: 60px;
+          margin-bottom: 0px;
+        }
+      }
+      &__yellow__rectangle {
+        width: 142px;
+        height: 13px;
+        background-color: $yellow;
+        position: absolute;
+        top: 15px;
+        left: 76px;
+        z-index: -1;
+        @include responsive-desktop {
+          width: 284px;
+          height: 27px;
+          top: 37px;
+          left: 157px;
+        }
+      }
+      #searchbar {
+        height: 35px;
+        width: 200px;
+        align-self: flex-end;
+        color: #636363;
+        border: 1px solid #636363;
+        border-radius: 10px;
+        font-size: $font-size-text;
+        font-weight: 300;
+        font-family: $font-family-title;
+        margin-bottom: 20px;
+        text-align: center;
+        @include responsive-desktop {
+          margin-bottom: 42px;
+          height: 53px;
+          width: 245px;
+        }
+      }
+
+      .table__container {
+        overflow-y: auto;
+        white-space: nowrap;
+        width: 350px;
+        @include responsive-desktop {
+          width: 1200px;
+          overflow-y: none;
+          white-space: none;
+        }
+        &__info {
+          width: 1200px;
+          font-size: $font-size-text;
+          font-weight: $font-weight-text;
+
+          &__thead {
+            height: 55px;
+            background-color: $yellow;
+            &__tr {
+              th {
+                vertical-align: middle;
+                text-align: left;
+              }
+            }
+          }
+          &__tbody {
+            &__tr {
+              td {
+                height: 55px;
+                vertical-align: middle;
+              }
+            }
+            &__tr:nth-child(even) {
+              background-color: #f5f5f5;
+            }
+          }
+        }
+      }
+    }
+    .container__button {
+      &__nav {
+        color: $yellow;
+      }
+      button {
+        background-color: white;
+        border: 1px solid #dfe3e8;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: 700;
+      }
+      button:hover {
+        background-color: #919eab;
       }
     }
   }
