--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -178,7 +178,7 @@ body {
       font-weight: 600;
       margin-top: 35px;
       @include responsive-tablet {
-        margin-bottom: 80px;
+        margin-bottom: 20px;
       }
       @include responsive-desktop {
         justify-content: center;
@@ -275,7 +275,7 @@ body {
         font-size: 48px;
         font-weight: 900;
         @include responsive-tablet {
-          margin-bottom: 80px;
+          margin-bottom: 20px;
         }
         @include responsive-desktop {
           margin-right: 126px;
@@ -300,7 +300,7 @@ body {
         text-align: center;
 
         @include responsive-tablet {
-          width: 595px;
+          width: auto;
           font-size: 50px;
         }
         @include responsive-desktop {
@@ -316,7 +316,7 @@ body {
         width: 100vw;
         @include responsive-tablet {
           height: 500px;
-          width: 759px;
+          width: 550px;
         }
         @include responsive-desktop {
           height: 586px;
@@ -328,6 +328,10 @@ body {
       width: 375px;
       height: 33px;
       margin-top: auto;
+      @include responsive-tablet {
+        height: 66px;
+        width: 751px;
+      }
       @include responsive-desktop {
         width: 1299px;
         height: 112px;
@@ -340,7 +344,38 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    .container__contact {
+      display: flex;
+      flex-direction: column-reverse;
+      &__info {
+        &__name {
+          h5 {
+            font-size: 30px;
+            font-weight: $font-weight-title;
+          }
+          &__yellow {
+            width: 200px;
+            height: 17px;
+            background-color: $yellow;
+          }
+        }
 
+        p {
+        }
+      }
+      &__photo {
+        height: 125px;
+        width: 125px;
+        background-color: red;
+        border-radius: 50%;
+        margin-bottom: 15px;
+        align-self: center;
+        @include responsive-desktop {
+          height: 255px;
+          width: 255px;
+        }
+      }
+    }
     .container__table {
       display: flex;
       flex-direction: column;
@@ -425,6 +460,10 @@ body {
               td {
                 height: 55px;
                 vertical-align: middle;
+                a {
+                  text-decoration: none;
+                  color: black;
+                }
               }
             }
             &__tr:nth-child(even) {
