--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -147,13 +147,13 @@ table {
   font-family: "Inter", sans-serif;
   color: rgba(0, 0, 0, 0.4);
 }
-@media screen and (min-width: 376px) and (max-width: 1439px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   .public_footer {
     justify-content: space-around;
     padding: 100px 60px;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   .public_footer {
     justify-content: space-around;
     height: 543px;
@@ -181,12 +181,12 @@ table {
   padding: 40px 0px;
   gap: 60px;
 }
-@media screen and (min-width: 376px) and (max-width: 1439px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   .public_footer_section {
     flex-direction: row;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   .public_footer_section {
     flex-direction: row;
   }
@@ -199,7 +199,7 @@ table {
   flex-direction: column;
   gap: 20px;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   .public_footer_contact {
     width: 50%;
   }
@@ -229,7 +229,7 @@ table {
   display: flex;
   border-spacing: 25px;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   .public_footer_contact_social_media {
     flex-direction: row;
     align-items: center;
@@ -245,7 +245,7 @@ table {
   gap: 20px;
   box-sizing: border-box;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   .public_footer_nav-footer {
     flex-direction: row;
     justify-content: space-between;
@@ -258,7 +258,7 @@ table {
   text-align: left;
   gap: 10px;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   .public_footer_nav-footer ul {
     gap: 69px;
   }
@@ -286,7 +286,7 @@ body .public__header {
   align-items: center;
   margin-bottom: 25px;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body .public__header {
     width: auto;
     margin-bottom: 57px;
@@ -300,12 +300,12 @@ body .public__header nav {
   font-weight: 600;
   margin-top: 35px;
 }
-@media screen and (min-width: 376px) and (max-width: 1439px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body .public__header nav {
     margin-bottom: 20px;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body .public__header nav {
     justify-content: center;
     flex-direction: row;
@@ -316,7 +316,7 @@ body .public__header nav .nav__bar {
   display: flex;
   margin-top: 35px;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body .public__header nav .nav__bar {
     margin-top: 94px;
     margin-right: 324px;
@@ -326,12 +326,12 @@ body .public__header nav .nav__bar {
 body .public__header nav .nav__bar li {
   margin-right: 10px;
 }
-@media screen and (min-width: 376px) and (max-width: 1439px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body .public__header nav .nav__bar li {
     margin-right: 20px;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body .public__header nav .nav__bar li {
     margin-right: 28px;
   }
@@ -356,7 +356,7 @@ body .public__header nav .nav__login {
   margin-top: 10px;
   margin-bottom: 35px;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body .public__header nav .nav__login {
     margin-right: 28px;
     flex-direction: row;
@@ -367,7 +367,7 @@ body .public__header nav .nav__login {
 body .public__header nav .nav__login li {
   margin-right: 10px;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body .public__header nav .nav__login li {
     margin-right: 44px;
   }
@@ -410,12 +410,12 @@ body .public__header nav h1 {
   font-size: 48px;
   font-weight: 900;
 }
-@media screen and (min-width: 376px) and (max-width: 1439px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body .public__header nav h1 {
     margin-bottom: 20px;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body .public__header nav h1 {
     margin-right: 126px;
     margin-top: 94px;
@@ -427,7 +427,7 @@ body .public__header .container__info {
   justify-content: center;
   align-items: center;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body .public__header .container__info {
     flex-direction: row;
     align-items: normal;
@@ -438,13 +438,13 @@ body .public__header .container__info h2 {
   font-weight: 900;
   text-align: center;
 }
-@media screen and (min-width: 376px) and (max-width: 1439px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body .public__header .container__info h2 {
     width: auto;
     font-size: 50px;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body .public__header .container__info h2 {
     font-size: 65px;
     text-align: left;
@@ -457,13 +457,13 @@ body .public__header .container__info .container__info__img {
   height: 290px;
   width: 100vw;
 }
-@media screen and (min-width: 376px) and (max-width: 1439px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body .public__header .container__info .container__info__img {
     height: 500px;
     width: 550px;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body .public__header .container__info .container__info__img {
     height: 586px;
     width: 759px;
@@ -474,13 +474,13 @@ body .public__header svg {
   height: 33px;
   margin-top: auto;
 }
-@media screen and (min-width: 376px) and (max-width: 1439px) {
+@media screen and (min-width: 376px) and (max-width: 1023px) {
   body .public__header svg {
     height: 66px;
     width: 751px;
   }
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body .public__header svg {
     width: 1299px;
     height: 112px;
@@ -496,28 +496,84 @@ body main .container__contact {
   display: flex;
   flex-direction: column-reverse;
 }
+@media screen and (min-width: 1224px) {
+  body main .container__contact {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 1088px;
+    height: 290px;
+  }
+}
+@media screen and (min-width: 1224px) {
+  body main .container__contact__info {
+    margin-top: 39px;
+  }
+}
+body main .container__contact__info__name {
+  position: relative;
+}
 body main .container__contact__info__name h5 {
   font-size: 30px;
   font-weight: 900;
+  z-index: 1;
+  margin-bottom: 20px;
+  font-family: "Inter", sans-serif;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__contact__info__name h5 {
+    margin-top: 39px;
+    font-size: 60px;
+  }
 }
 body main .container__contact__info__name__yellow {
   width: 200px;
   height: 17px;
   background-color: #f9de4e;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: -1;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__contact__info__name__yellow {
+    width: 496px;
+    height: 35px;
+    top: 35px;
+    left: 30px;
+  }
+}
+body main .container__contact__info p {
+  margin-bottom: 15px;
+  font-size: 20px;
+  font-weight: 900;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__contact__info p {
+    margin-bottom: 5px;
+    font-size: 25px;
+    font-weight: 900;
+    text-align: left;
+  }
 }
 body main .container__contact__photo {
   height: 125px;
   width: 125px;
-  background-color: red;
   border-radius: 50%;
   margin-bottom: 15px;
   align-self: center;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body main .container__contact__photo {
     height: 255px;
     width: 255px;
   }
+}
+body main .container__contact__photo img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
 }
 body main .container__table {
   display: flex;
@@ -525,7 +581,7 @@ body main .container__table {
   width: 350px;
   position: relative;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body main .container__table {
     width: 1193px;
     max-height: 799px;
@@ -539,7 +595,7 @@ body main .container__table h3 {
   z-index: 1;
   margin-bottom: 20px;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body main .container__table h3 {
     font-size: 60px;
     margin-bottom: 0px;
@@ -554,7 +610,7 @@ body main .container__table__yellow__rectangle {
   left: 76px;
   z-index: -1;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body main .container__table__yellow__rectangle {
     width: 284px;
     height: 27px;
@@ -569,17 +625,18 @@ body main .container__table #searchbar {
   color: #636363;
   border: 1px solid #636363;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 300;
   font-family: "Inter", sans-serif;
   margin-bottom: 20px;
   text-align: center;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body main .container__table #searchbar {
     margin-bottom: 42px;
     height: 53px;
     width: 245px;
+    font-size: 20px;
   }
 }
 body main .container__table .table__container {
@@ -587,7 +644,7 @@ body main .container__table .table__container {
   white-space: nowrap;
   width: 350px;
 }
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1224px) {
   body main .container__table .table__container {
     width: 1200px;
     overflow-y: none;
