--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -492,27 +492,21 @@ body main {
   justify-content: center;
   align-items: center;
 }
-body main .container__contact {
+body main .container__company__info {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
 }
 @media screen and (min-width: 1224px) {
-  body main .container__contact {
-    flex-direction: row;
-    justify-content: space-between;
+  body main .container__company__info {
+    flex-direction: column;
     width: 1088px;
     height: 290px;
   }
 }
-@media screen and (min-width: 1224px) {
-  body main .container__contact__info {
-    margin-top: 39px;
-  }
-}
-body main .container__contact__info__name {
+body main .container__company__info__name {
   position: relative;
 }
-body main .container__contact__info__name h5 {
+body main .container__company__info__name h5 {
   font-size: 30px;
   font-weight: 900;
   z-index: 1;
@@ -520,12 +514,12 @@ body main .container__contact__info__name h5 {
   font-family: "Inter", sans-serif;
 }
 @media screen and (min-width: 1224px) {
-  body main .container__contact__info__name h5 {
+  body main .container__company__info__name h5 {
     margin-top: 39px;
     font-size: 60px;
   }
 }
-body main .container__contact__info__name__yellow {
+body main .container__company__info__name__yellow {
   width: 200px;
   height: 17px;
   background-color: #f9de4e;
@@ -535,27 +529,180 @@ body main .container__contact__info__name__yellow {
   z-index: -1;
 }
 @media screen and (min-width: 1224px) {
-  body main .container__contact__info__name__yellow {
+  body main .container__company__info__name__yellow {
     width: 496px;
     height: 35px;
-    top: 35px;
+    top: 75px;
     left: 30px;
   }
 }
-body main .container__contact__info p {
+body main .container__company__info p {
   margin-bottom: 15px;
   font-size: 20px;
   font-weight: 900;
 }
 @media screen and (min-width: 1224px) {
-  body main .container__contact__info p {
+  body main .container__company__info p {
     margin-bottom: 5px;
     font-size: 25px;
     font-weight: 900;
     text-align: left;
   }
 }
-body main .container__contact__photo {
+body main .container__people {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+body main .container__people h5 {
+  align-self: flex-start;
+  font-family: "Inter", sans-serif;
+  font-size: 25px;
+  font-weight: 900;
+  margin-left: 30px;
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__people h5 {
+    font-size: 60px;
+  }
+}
+body main .container__people__info {
+  display: flex;
+  flex-direction: row;
+  width: 350px;
+  overflow-y: auto;
+  position: relative;
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__people__info {
+    flex-direction: column;
+    width: 1088px;
+  }
+}
+body main .container__people__info__card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 170px;
+  width: 120px;
+  margin-right: 10px;
+  background-color: #f5f5f5;
+  border-radius: 15px;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__people__info__card {
+    flex-direction: row;
+    height: 193px;
+    width: 376px;
+  }
+}
+body main .container__people__info__card__photo {
+  height: 90px;
+  width: 90px;
+  border-radius: 50%;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__people__info__card__photo {
+    height: 255px;
+    width: 255px;
+  }
+}
+body main .container__people__info__card__photo img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+body main .container__people__info__card p {
+  font-family: "Roboto", serif;
+  font-weight: 900;
+  font-size: 20px;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__people__info__card p {
+    font-size: 35px;
+  }
+}
+body main .container__people__info__svg {
+  display: none;
+}
+@media screen and (min-width: 1224px) {
+  body main .container__people__info__svg {
+    display: block;
+    position: absolute;
+    right: 0;
+    z-index: -1;
+  }
+}
+body .container__contact {
+  display: flex;
+  flex-direction: column-reverse;
+}
+@media screen and (min-width: 1224px) {
+  body .container__contact {
+    flex-direction: row;
+    justify-content: space-between;
+    width: 1088px;
+    height: 290px;
+  }
+}
+@media screen and (min-width: 1224px) {
+  body .container__contact__info {
+    margin-top: 39px;
+  }
+}
+body .container__contact__info__name {
+  position: relative;
+}
+body .container__contact__info__name h5 {
+  font-size: 30px;
+  font-weight: 900;
+  z-index: 1;
+  margin-bottom: 20px;
+  font-family: "Inter", sans-serif;
+}
+@media screen and (min-width: 1224px) {
+  body .container__contact__info__name h5 {
+    margin-top: 39px;
+    font-size: 60px;
+  }
+}
+body .container__contact__info__name__yellow {
+  width: 200px;
+  height: 17px;
+  background-color: #f9de4e;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: -1;
+}
+@media screen and (min-width: 1224px) {
+  body .container__contact__info__name__yellow {
+    width: 496px;
+    height: 35px;
+    top: 35px;
+    left: 30px;
+  }
+}
+body .container__contact__info p {
+  margin-bottom: 15px;
+  font-size: 20px;
+  font-weight: 900;
+}
+@media screen and (min-width: 1224px) {
+  body .container__contact__info p {
+    margin-bottom: 5px;
+    font-size: 25px;
+    font-weight: 900;
+    text-align: left;
+  }
+}
+body .container__contact__photo {
   height: 125px;
   width: 125px;
   border-radius: 50%;
@@ -563,36 +710,49 @@ body main .container__contact__photo {
   align-self: center;
 }
 @media screen and (min-width: 1224px) {
-  body main .container__contact__photo {
+  body .container__contact__photo {
     height: 255px;
     width: 255px;
   }
 }
-body main .container__contact__photo img {
+body .container__contact__photo img {
   height: 100%;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 50%;
 }
-body main hr {
+body hr {
   border: 1px solid #cdcdcd;
   width: 70%;
+  margin-bottom: 15px;
 }
-body main .container__table {
+body .container__table {
   display: flex;
   flex-direction: column;
   width: 350px;
   position: relative;
 }
 @media screen and (min-width: 1224px) {
-  body main .container__table {
+  body .container__table {
     width: 1193px;
     max-height: 799px;
     margin-bottom: 51px;
   }
 }
-body main .container__table h3 {
+body .container__table h5 {
+  font-family: "Inter", sans-serif;
+  font-size: 25px;
+  font-weight: 900;
+  margin-left: 30px;
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 1224px) {
+  body .container__table h5 {
+    font-size: 60px;
+  }
+}
+body .container__table h3 {
   font-size: 30px;
   font-weight: 900;
   font-family: "Inter", sans-serif;
@@ -600,12 +760,12 @@ body main .container__table h3 {
   margin-bottom: 20px;
 }
 @media screen and (min-width: 1224px) {
-  body main .container__table h3 {
+  body .container__table h3 {
     font-size: 60px;
     margin-bottom: 0px;
   }
 }
-body main .container__table__yellow__rectangle {
+body .container__table__yellow__rectangle {
   width: 142px;
   height: 13px;
   background-color: #f9de4e;
@@ -615,14 +775,14 @@ body main .container__table__yellow__rectangle {
   z-index: -1;
 }
 @media screen and (min-width: 1224px) {
-  body main .container__table__yellow__rectangle {
+  body .container__table__yellow__rectangle {
     width: 284px;
     height: 27px;
     top: 37px;
     left: 157px;
   }
 }
-body main .container__table #searchbar {
+body .container__table #searchbar {
   height: 35px;
   width: 200px;
   align-self: flex-end;
@@ -636,53 +796,53 @@ body main .container__table #searchbar {
   text-align: center;
 }
 @media screen and (min-width: 1224px) {
-  body main .container__table #searchbar {
+  body .container__table #searchbar {
     margin-bottom: 42px;
     height: 53px;
     width: 245px;
     font-size: 20px;
   }
 }
-body main .container__table .table__container {
+body .container__table .table__container {
   overflow-y: auto;
   white-space: nowrap;
   width: 350px;
 }
 @media screen and (min-width: 1224px) {
-  body main .container__table .table__container {
+  body .container__table .table__container {
     width: 1200px;
     overflow-y: none;
     white-space: none;
   }
 }
-body main .container__table .table__container__info {
+body .container__table .table__container__info {
   width: 1200px;
   font-size: 20px;
   font-weight: 600;
 }
-body main .container__table .table__container__info__thead {
+body .container__table .table__container__info__thead {
   height: 55px;
   background-color: #f9de4e;
 }
-body main .container__table .table__container__info__thead__tr th {
+body .container__table .table__container__info__thead__tr th {
   vertical-align: middle;
   text-align: left;
 }
-body main .container__table .table__container__info__tbody__tr td {
+body .container__table .table__container__info__tbody__tr td {
   height: 55px;
   vertical-align: middle;
 }
-body main .container__table .table__container__info__tbody__tr td a {
+body .container__table .table__container__info__tbody__tr td a {
   text-decoration: none;
   color: black;
 }
-body main .container__table .table__container__info__tbody__tr:nth-child(even) {
+body .container__table .table__container__info__tbody__tr:nth-child(even) {
   background-color: #f5f5f5;
 }
-body main .container__button__nav {
+body .container__button__nav {
   color: #f9de4e;
 }
-body main .container__button button {
+body .container__button button {
   background-color: white;
   border: 1px solid #dfe3e8;
   border-radius: 4px;
@@ -690,6 +850,6 @@ body main .container__button button {
   font-size: 14px;
   font-weight: 700;
 }
-body main .container__button button:hover {
+body .container__button button:hover {
   background-color: #919eab;
 }/*# sourceMappingURL=main.css.map */
