--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -689,6 +689,7 @@ body .container__contact__info__name h5 {
   body .container__contact__info__name h5 {
     margin-top: 39px;
     font-size: 60px;
+    margin-bottom: 62px;
   }
 }
 body .container__contact__info__name__yellow {
