--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -536,6 +536,7 @@ body {
           @include responsive-desktop {
             margin-top: 39px;
             font-size: 60px;
+            margin-bottom: 62px;
           }
         }
         &__yellow {
