--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -345,42 +345,39 @@ body {
         justify-content: center;
         align-items: center;
         .container__image__aside {
-            // position: absolute;
-            // display: flex;
-            // align-items: center;
-            // justify-content: center;
             width: 100%;
             height: 230px;
             &__hand {
                 position: absolute;
                 right: 0;
             }
-            // &__light {
-            //     position: absolute;
-            //     left: 0;
-            // }
         }
         .container__info__slogan {
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            margin-top: 20px;
+            margin: 20px 10px 0px;
+            gap: 25px;
+            @include responsive-tablet {
+            }
             @include responsive-desktop {
                 flex-direction: row;
                 align-items: normal;
+                gap: 0px;
+                justify-content: end;
+                margin: 20px 0px 0px;
             }
             h2 {
                 font-size: 35px;
                 font-weight: 900;
                 text-align: left;
+                font-family: $font-family-title;
 
                 @include responsive-tablet {
                     width: auto;
                     font-size: 50px;
                 }
                 @include responsive-desktop {
-                    font-size: 65px;
+                    font-size: 68px;
                     text-align: left;
                     width: 45%;
                     margin-top: 150px;
