--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -551,3 +551,11 @@ body {
         }
     }
 }
+.dataTables_info {
+    // display: none;
+}
+::placeholder {
+    content: attr(test);
+
+    // background-color: blue;
+}
