--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -288,7 +288,7 @@ body .public__header {
 }
 @media screen and (min-width: 1224px) {
   body .public__header {
-    width: auto;
+    width: 100vw;
     margin-bottom: 57px;
   }
 }
@@ -469,19 +469,19 @@ body .public__header .container__info .container__info__img {
     width: 759px;
   }
 }
-body .public__header svg {
+body .public__header img {
   width: 375px;
   height: 33px;
   margin-top: auto;
 }
 @media screen and (min-width: 376px) and (max-width: 1023px) {
-  body .public__header svg {
+  body .public__header img {
     height: 66px;
     width: 751px;
   }
 }
 @media screen and (min-width: 1224px) {
-  body .public__header svg {
+  body .public__header img {
     width: 1299px;
     height: 112px;
   }
@@ -807,7 +807,22 @@ body .container__table__yellow__rectangle {
     left: 157px;
   }
 }
-body .container__table #searchbar {
+body .container__table .table__container {
+  overflow-y: auto;
+  white-space: nowrap;
+  width: 350px;
+}
+@media screen and (min-width: 1224px) {
+  body .container__table .table__container {
+    width: 1200px;
+    overflow-y: none;
+    white-space: none;
+  }
+}
+body .container__table .table__container .label_search {
+  color: rgba(145, 158, 171, 0);
+}
+body .container__table .table__container input {
   height: 35px;
   width: 200px;
   align-self: flex-end;
@@ -821,23 +836,11 @@ body .container__table #searchbar {
   text-align: center;
 }
 @media screen and (min-width: 1224px) {
-  body .container__table #searchbar {
+  body .container__table .table__container input {
     margin-bottom: 42px;
     height: 53px;
     width: 245px;
     font-size: 20px;
-  }
-}
-body .container__table .table__container {
-  overflow-y: auto;
-  white-space: nowrap;
-  width: 350px;
-}
-@media screen and (min-width: 1224px) {
-  body .container__table .table__container {
-    width: 1200px;
-    overflow-y: none;
-    white-space: none;
   }
 }
 body .container__table .table__container__info {
@@ -863,18 +866,4 @@ body .container__table .table__container__info__tbody__tr td a {
 }
 body .container__table .table__container__info__tbody__tr:nth-child(even) {
   background-color: #f5f5f5;
-}
-body .container__button__nav {
-  color: #f9de4e;
-}
-body .container__button button {
-  background-color: white;
-  border: 1px solid #dfe3e8;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 14px;
-  font-weight: 700;
-}
-body .container__button button:hover {
-  background-color: #919eab;
 }/*# sourceMappingURL=main.css.map */
