--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -159,7 +159,7 @@ body {
     color: black;
     width: 100vw;
     min-height: 250px;
-    max-height: 100vh;
+    max-height: 1000px;
     background-color: $yellow;
     display: flex;
     flex-direction: column;
