--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -708,26 +708,29 @@ body {
       overflow-y: none;
       white-space: none;
     }
-
-    input {
-      height: 35px;
-      width: 200px;
-      align-self: flex-end;
-      color: #636363;
-      border: 1px solid #636363;
-      border-radius: 10px;
-      font-size: 15px;
-      font-weight: 300;
-      font-family: $font-family-title;
-      margin-bottom: 20px;
-      text-align: center;
-      @include responsive-desktop {
-        margin-bottom: 42px;
-        height: 53px;
-        width: 245px;
-        font-size: $font-size-text;
+    .label_search {
+      color: #ffffff00;
+      input {
+        height: 35px;
+        width: 200px;
+        align-self: flex-end;
+        color: #636363;
+        border: 1px solid #636363;
+        border-radius: 10px;
+        font-size: 15px;
+        font-weight: 300;
+        font-family: $font-family-title;
+        margin-bottom: 20px;
+        text-align: center;
+        @include responsive-desktop {
+          margin-bottom: 42px;
+          height: 53px;
+          width: 245px;
+          font-size: $font-size-text;
+        }
       }
     }
+
     &__info {
       width: 1200px;
       font-size: $font-size-text;
@@ -854,13 +857,13 @@ body {
         height: 13px;
         background-color: $yellow;
         position: absolute;
-        top: 15px;
+        top: 40px;
         left: 76px;
         z-index: -1;
         @include responsive-desktop {
           width: 284px;
           height: 27px;
-          top: 37px;
+          top: 60px;
           left: 157px;
         }
       }
@@ -896,14 +899,21 @@ body {
           width: 1200px;
           font-size: $font-size-text;
           font-weight: $font-weight-text;
+          border: none;
+          margin-bottom: 25px;
+          @include responsive-desktop {
+            margin-bottom: 53px;
+          }
 
           &__thead {
             height: 55px;
             background-color: $yellow;
+
             &__tr {
               th {
                 vertical-align: middle;
                 text-align: left;
+                border: none;
               }
             }
           }
@@ -912,6 +922,8 @@ body {
               td {
                 height: 55px;
                 vertical-align: middle;
+                border: none;
+
                 a {
                   text-decoration: none;
                   color: black;
@@ -920,6 +932,9 @@ body {
             }
             &__tr:nth-child(even) {
               background-color: #f5f5f5;
+            }
+            &__tr:nth-child(odd) {
+              background-color: #ffffff;
             }
           }
         }
@@ -937,6 +952,10 @@ body {
         font-family: $font-family-text;
         font-size: 14px;
         font-weight: 700;
+      }
+
+      a:hover {
+        background: #919eab;
       }
     }
   }
